Change footer and header a little

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header">
     <div class="container">
-      Welcome
+      garvak@yandex.ru
     </div>
   </header>
 
@@ -52,7 +52,7 @@
 
     <footer class="page-footer">
     	<div class="container">
-        +7(999)701-34-87
+        <code>&lt;Telephone&gt;</code>
       </div>
     </footer>
   </body>
