--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <header class="page-header">
     <div class="container">
-      garvak@yandex.ru
+      <a class="header-email" href="mailto:garvak@yandex.ru">garvak@yandex.ru</a>
+      <a class="header-phone" href="tel:+79997013487">+7 999 701 34 87</a>
     </div>
   </header>
 
@@ -25,6 +26,9 @@
   <section class="intro">
     <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="550" alt="Майн фейсен пхотограпхи">
+        </figure>
       <h3>27 лет, есть бородка и желание топить в код</h3>
       <p>Инженер-проектировщик по образованию, решил идти в сфере ИТ, ибо сфера куда интереснее. Во всём.</p>
       <h3>Стэк для QA</h3>
@@ -41,9 +45,13 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+          <figure class="project-image">
+            <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+          </figure>
         <h3>Магазин товаров для дома</h3>
+          <a class="button" href="source/project-gloevk/index.html">открыть</a>
         <p>Мой первый сайт.</p>
+        
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
@@ -52,7 +60,8 @@
 
     <footer class="page-footer">
     	<div class="container">
-        <code>&lt;Telephone&gt;</code>
+        <a class="footer-email" href="mailto:garvak@yandex.ru">garvak@yandex.ru</a>
+        <a class="footer-phone" href="tel:+79997013487">+7 999 701 34 87</a>
       </div>
     </footer>
   </body>
